<resources>
    <string name="app_name">Geoquiz</string>
    <string name="trueQuiz">True</string>
    <string name="falseQuiz">False</string>
    <string name="nextQuiz">Next</string>
    <string name="prevQuiz">Previous</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="action_settings">Settings</string>

    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean</string>
    <string name="question_africa">The source of the Nile River is in Sudan</string>
    <string name="question_americas">The source of the Amazon River is in the Americas</string>
    <string name="question_mideast">The Suez canal connects the Red Sea to the Mediterrenean Sea</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest freshwater lake</string>
    <string name="cheat_button">Cheat!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgement_toast">Cheating is wrong.</string>
    <string name="title_activity_cheat">CheatActivity</string>

    <string name="hello_world">Hello world!</string>
</resources>
