<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"

        android:id="@+id/question_text" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal">
        <Button
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/trueQuiz"
            android:id="@+id/true_button"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/falseQuiz"
            android:layout_weight="1"
            android:id="@+id/false_button"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <Button
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:text="@string/nextQuiz"
            android:id="@+id/next_button"
            android:layout_gravity="bottom|right" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prevQuiz"
        android:id="@+id/prev_button"
        android:layout_gravity="bottom|left" />

</FrameLayout>
